--- a/assets/scss/app/streamdeck.scss
+++ b/assets/scss/app/streamdeck.scss
@@ -1,6 +1,4 @@
 @import 'theme-reset';
 
-@import 'component/toc',
-  'component/badge',
-  'component/code-label',
+@import 'component/toc', 'component/badge', 'component/code-label',
   'component/editor';
